--- a/estilos.css
+++ b/estilos.css
@@ -1,51 +1,34 @@
-
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, sans-serif;
+    margin: 0;
 }
 
-.login-form {
-    margin-top: 50px;
-    text-align: left;
-}
-
-.label {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0em;
-    text-align: left;
-}
-
-.input {
-    width: 200px;
-    height: 30px;
-    background: rgba(217, 217, 217, 1);
-    border: none;
-    margin-bottom: 10px;
-}
-
-.button-container {
+h1 {
     margin-top: 20px;
 }
 
-.common-button {
-    width: 200px;
-    height: 40px;
-    border-radius: 20px;
-    background: rgba(98, 13, 79, 1);
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #fff;
-    margin-right: 10px;
+
+ion-item {
+    --padding-start: 0;
 }
 
-.mensaje {
-    width: 200px;
-    height: 40px;
-    margin-top: 10px;
-    padding: 5px;
-    border-radius: 5px;
+ion-button {
+    display: block;
+    margin: 20px auto;
 }
+
+#LISTADO {
+    border-top: 2px solid #ccc;
+    padding-top: 20px;
+}
+
+#LISTADO h1 {
+   
+    margin-bottom: 10px;
+}
+
+#listaProductos {
+    margin-bottom: 20px;
+}
+
+
