--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,12 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 5px;
+  
 }
 
 h1 {
-    margin-top: 20px;
+    background-color:plum;
+    text-align: center;
 }
 
 
@@ -13,17 +15,21 @@ ion-item {
 }
 
 ion-button {
-    display: block;
-    margin: 20px auto;
+    background-color: purple;
 }
 
+ion-button.hover{
+
+background-color: plum;
+
+}
 #LISTADO {
-    border-top: 2px solid #ccc;
+    text-align:left;
+    background-color:steelblue;
     padding-top: 20px;
 }
 
 #LISTADO h1 {
-   
     margin-bottom: 10px;
 }
 
