--- a/miApp-2064435/src/app/lista-alumnos/lista-alumnos.component.html
+++ b/miApp-2064435/src/app/lista-alumnos/lista-alumnos.component.html
@@ -1,5 +1,13 @@
-<ion-list *ngFor="let alumno of alumnos">
-  <ion-item>
+<ion-list>
+  <ion-item-sliding *ngFor="let alumno of alumnos">
+    <ion-item>
       {{alumno}}
-  </ion-item>
+    </ion-item>
+    <ion-item-options side="start">
+      <ion-item-option color="secondary" (click)="addToFavorites(alumno)">Agregar a Favoritos</ion-item-option>
+    </ion-item-options>
+    <ion-item-options side="end">
+      <ion-item-option color="danger" (click)="confirmDelete(alumno)">Eliminar</ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 </ion-list>
