--- a/miApp-2064435/src/app/app.component.html
+++ b/miApp-2064435/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-productos></app-productos>
+<ion-app>
+    <ion-content>
+        <app-productos></app-productos>
+    </ion-content>
+</ion-app>
 
