--- a/miApp-2064435/src/app/app.component.html
+++ b/miApp-2064435/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ion-app>
     <ion-content>
-        <app-productos></app-productos>
+        <app-lista-alumnos>
+            
+        </app-lista-alumnos>
     </ion-content>
 </ion-app>
-
